# live-view-rep

./: .clang-format  .clang-tidy  .dccache  .env.example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  ci-config.json  config.json  config.json.example  docker-compose.yml  main.cpp  missions.txt  vcpkg.json
.cache/clangd/index/: main_test.cpp.5A3108587FF895B9.idx  server.cpp.D050B2FFCECE8069.idx  server.h.7C3E6B7E403FA73B.idx
.github/workflows/: build.yml  live-view-pipeline.yml  macos-test.yml  macos-testing.yml  postgres-setup.yml
configs/: ci-config.json  config.json
docker/: CMakeLists.txt  vcpkg.json
docker-cmake/: INFO.md
docs/: README.md  TIMES.md
examples/: openlocationcode_example.cpp
inc/: Address.h  app.h  live_view.h
inc/Conditions/: Condition.h
inc/Conditions/Types/: RoadCondition.h
inc/Core/: Address.h  AddressLogger.h  Benchmark.h  Entity.h  Geo.h  Image.h  ObjectLogger.h  Sector.h  Type.h  UUID.h
inc/Core/Address/: Address.h
inc/Core/Address/Common/: Addresses.h  Common.h  Countries.h
inc/Core/Address/Conditions/: Condition.h  RoadCondition.h
inc/Core/Conditions/: Condition.h
inc/Core/Conditions/Types/: RoadCondition.h
inc/Core/Image/: Image.h
inc/Core/Interface/: InstanceLogger.h
inc/Core/Location/: Geolocation.h
inc/Core/Location/PlusCodes/: codearea.h  openlocationcode.h
inc/Core/Responses/: BaseResponse.h  DatabaseResponse.h  Response.h
inc/Models/: AbstractDatabaseModel.h  AddressModel.h  BaseLogModel.h  BaseModel.h  DBModel.h  DatabaseModel.h  LocationModel.h  LogModel.h  LoggerModel.h  Model.h  StreetModel.h
inc/Models/LoggerModel/: LoggerModel.h
inc/Models/StreetModel/: StreetModel.h
inc/config/: Config.h  DB.h  DBManager.h  Database.h  DatabaseCommands.h  DatabaseManager.h  DatabasePool.h  FileSystem.h  GConfig.h  db_connection.h  env.h  logger.h
inc/db/: connection.h  sql_connection.h
inc/server/: server.h
lib/Crow/include/crow/: http_parser_merged.h  utility.h
src/: Address.cpp  CMakeLists.txt  app.cpp  server.cpp
src/Core/: Entity.cpp  Entity.h  Geo.cpp  Image.cpp  Type.cpp  UUID.cpp
src/Core/Address/: Address.cpp
src/Core/Location/: Geolocation.cpp
src/Core/Location/PlusCodes/: codearea.cpp  openlocationcode.cpp
src/Core/Responses/: DatabaseResponse.cpp  Response.cpp
src/Models/: AddressModel.cpp  BaseLogModel.cpp  DatabaseModel.cpp  LocationModel.cpp  LogModel.cpp  LoggerModel.cpp  Model.cpp
src/Models/LoggerModel/: LoggerModel.cpp
src/config/: Config.cpp  DB.cpp  DBManager.cpp  Database.cpp  DatabaseManager.cpp  DatabasePool.cpp  FileSystem.cpp  GConfig.cpp  db_connection.cpp  env.cpp  logger.cpp
src/db/: sql_connection.cpp
src/server/: server.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  Logger.cpp  Test.h
tests/Config/Config/: Config.cpp
tests/Config/Database/: Database.cpp  DatabasePool.cpp
tests/Config/Logger/: Logger.cpp
tests/Core/: UUID.cpp
tests/Core/Location/: Geolocation.cpp
tests/Models/: AddressModel.cpp  BaseLogModel.cpp  Model.cpp
